--- a/src/scss/_partial/_post-page.scss
+++ b/src/scss/_partial/_post-page.scss
@@ -151,9 +151,9 @@
 // ========== paginator ========== //
 .post-paginator {
     overflow: hidden;
-    padding: 0;
+    margin: 0;
     list-style: none;
-    margin: 2.5rem 0 1rem 0;
+    padding: 2.5rem 0 1rem 0;
     display: flex;
     justify-content: space-between;
     li {
